<resources>
    <string name="app_name">firebase</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account_signup">Don\'t have account? SignUp</string>
    <string name="signup">signup</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="welcome">Welcome...</string>
    <string name="logout">Logout</string>
    <string name="resend_link">Resend Link</string>


</resources>